# surrogate-mgem

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.nf  nextflow.config  nf-test.config  pyproject.toml
.github/workflows/: ci.yml  images.yml
conf/: base.config  modules.config
docker/: data.Dockerfile  train.Dockerfile
examples/single_mgem/: README.md  params.config  roster.csv  run.sh
modules/local/active_learn/: main.nf
modules/local/collect_metrics/: main.nf
modules/local/generate_data/: main.nf
modules/local/merge_data/: main.nf
modules/local/train_surrogate/: main.nf
reports/: model_report.qmd
results/pipeline_info/: execution_report_2026-07-14_18-01-11.html  execution_timeline_2026-07-14_18-01-11.html  pipeline_dag_2026-07-14_18-01-11.html
src/surrogate_mgem/: __init__.py  active.py  cli.py  data.py  encoder.py  ensemble.py  infer.py  model.py  sampling.py  train.py
tests/: default.nf.test  e2e.nf.test  nextflow.config  roster.csv  test_active.py  test_active_round.py  test_data.py  test_encoder.py  test_ensemble.py  test_infer.py  test_model.py  test_sampling.py  test_smoke.py  test_train.py
tests/models/: gA.xml
workflows/: surrogate_training.nf
