[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surrogate-mgem"
version = "0.0.1"
description = "Learned per-genome surrogate metabolic models, composed into a community to bypass LP solves during media optimisation and interaction sampling."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Tim Rozday" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.1",
]

[project.optional-dependencies]
# Heavy solver stack; only the data-generation module needs it. Kept out of the
# default install so CI (model/train/validate/search) runs without micom/cobra.
data = [
    "micom>=0.33",
    "cobra>=0.29",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.5",
    "ruff>=0.6",
]

[project.scripts]
surrogate-mgem = "surrogate_mgem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/surrogate_mgem"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions.
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that need the micom/cobra solver stack (deselect with -m 'not slow')",
]
addopts = "-m 'not slow'"
